Ejercicios 5-7 de Lista de ejercicios de algoritmos

--- a/Lista-de-Ejercicios1.html
+++ b/Lista-de-Ejercicios1.html
@@ -17,5 +17,9 @@
     <script src="js/Ejercicio4.js" type="module"></script>
     <h1>Ejercicio 5</h1>
     <script src="js/Ejercicio5.js" type="module"></script>
+    <h1>Ejercicio 6</h1>
+    <script src="js/Ejercicio6.js" type="module"></script>
+    <h1>Ejercicio 7</h1>
+    <script src="js/Ejercicio7.js" type="module"></script>
 </body>
 </html>
