--- a/Lista-de-Ejercicios1.html
+++ b/Lista-de-Ejercicios1.html
@@ -21,5 +21,15 @@
     <script src="js/Ejercicio6.js" type="module"></script>
     <h1>Ejercicio 7</h1>
     <script src="js/Ejercicio7.js" type="module"></script>
+    <h1>Ejercicio 8</h1>
+    <script src="js/Ejercicio8.js" type="module"></script>
+    <h1>Ejercicio 9</h1>
+    <script src="js/Ejercicio9.js" type="module"></script>
+    <h1>Ejercicio 10</h1>
+    <script src="js/Ejercicio10.js" type="module"></script>
+    <h1>Ejercicio 11</h1>
+    <script src="js/Ejercicio11.js" type="module"></script>
+    <h1>Ejercicio 12</h1>
+    <script src="js/Ejercicio12.js" type="module"></script>
 </body>
 </html>
