--- a/Lista-de-Ejercicios1.html
+++ b/Lista-de-Ejercicios1.html
@@ -7,7 +7,7 @@
     <title>Lista de Ejercicios</title>
 </head>
 <body>
-    <h1>Ejercicio 1</h1>
+    <!--<h1>Ejercicio 1</h1>
     <script src="js/Ejercicio1.js" type="module"></script>
     <h1>Ejercicio 2</h1>
     <script src="js/Ejercicio2.js" type="module"></script>
@@ -31,5 +31,13 @@
     <script src="js/Ejercicio11.js" type="module"></script>
     <h1>Ejercicio 12</h1>
     <script src="js/Ejercicio12.js" type="module"></script>
+    <h1>Ejercicio 13</h1>
+    <script src="js/Ejercicio13.js" type="module"></script>
+    <h1>Ejercicio 14</h1>
+    <script src="js/Ejercicio14.js" type="module"></script>
+    <h1>Ejercicio 15</h1>
+    <script src="js/Ejercicio15.js" type="module"></script>
+    <h1>Ejercicio 16</h1>-->
+    <script src="js/Ejercicio16.js" type="module"></script>
 </body>
 </html>
