Ejercicios 17-21 de Lista de ejercicios de algoritmos

--- a/Lista-de-Ejercicios1.html
+++ b/Lista-de-Ejercicios1.html
@@ -37,7 +37,19 @@
     <script src="js/Ejercicio14.js" type="module"></script>
     <h1>Ejercicio 15</h1>
     <script src="js/Ejercicio15.js" type="module"></script>
-    <h1>Ejercicio 16</h1>-->
+    <h1>Ejercicio 16</h1>
     <script src="js/Ejercicio16.js" type="module"></script>
+    <h1>Ejercicio 17</h1>
+    <script src="js/Ejercicio17.js" type="module"></script>
+    <h1>Ejercicio 18</h1>
+    <script src="js/Ejercicio18.js" type="module"></script>
+    <h1>Ejercicio 19</h1>
+    <script src="js/Ejercicio19.js" type="module"></script>
+    <h1>Ejercicio 20</h1>
+    <script src="js/Ejercicio20.js" type="module"></script>-->
+    <h1>Ejercicio 21</h1>
+    <script src="js/Ejercicio21.js" type="module"></script>
+
+
 </body>
 </html>
