--- a/Lista-de-Ejercicios1.html
+++ b/Lista-de-Ejercicios1.html
@@ -46,9 +46,17 @@
     <h1>Ejercicio 19</h1>
     <script src="js/Ejercicio19.js" type="module"></script>
     <h1>Ejercicio 20</h1>
-    <script src="js/Ejercicio20.js" type="module"></script>-->
+    <script src="js/Ejercicio20.js" type="module"></script>
     <h1>Ejercicio 21</h1>
     <script src="js/Ejercicio21.js" type="module"></script>
+    <h1>Ejercicio 22</h1>
+    <script src="js/Ejercicio22.js" type="module"></script>
+    <h1>Ejercicio 23</h1>
+    <script src="js/Ejercicio23.js" type="module"></script>
+    <h1>Ejercicio 24</h1>
+    <script src="js/Ejercicio24.js" type="module"></script>-->
+    <h1>Ejercicio 25</h1>
+    <script src="js/Ejercicio25.js" type="module"></script>
 
 
 </body>
