Ejercicios 26-29 de Lista de ejercicios de algoritmos

--- a/Lista-de-Ejercicios1.html
+++ b/Lista-de-Ejercicios1.html
@@ -54,9 +54,17 @@
     <h1>Ejercicio 23</h1>
     <script src="js/Ejercicio23.js" type="module"></script>
     <h1>Ejercicio 24</h1>
-    <script src="js/Ejercicio24.js" type="module"></script>-->
+    <script src="js/Ejercicio24.js" type="module"></script>
     <h1>Ejercicio 25</h1>
     <script src="js/Ejercicio25.js" type="module"></script>
+    <h1>Ejercicio 26</h1>
+    <script src="js/Ejercicio26.js" type="module"></script>
+    <h1>Ejercicio 27</h1>
+    <script src="js/Ejercicio27.js" type="module"></script>
+    <h1>Ejercicio 28</h1>
+    <script src="js/Ejercicio28.js" type="module"></script>-->
+    <h1>Ejercicio 29</h1>
+    <script src="js/Ejercicio29.js" type="module"></script>
 
 
 </body>
